# metamorphosis-project

./: CMakeLists.txt  README.md
resources/: back_closeup_body_realigned.json
src/: main.cpp
